# nox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
app/core/: config.py  dependencies.py
app/db/: database.py  migrate.py
app/db/migrations/: 001_initial.sql
app/models/: __init__.py  blocklist.py  device.py  session.py
app/routes/: blocklist.py  device.py  enrollment.py  sessions.py
app/schemas/: blocklist.py  device.py  session.py
app/services/: blocklist_service.py  enrollment_service.py  mdm_service.py  session_service.py
deploy/: Caddyfile  nox.church.conf
ios/: project.yml
ios/Nox/: BlockController.swift  ContentView.swift  Info.plist  NoxApp.swift  Theme.swift
ios/Nox.xcodeproj/: project.pbxproj
ios/Nox.xcodeproj/xcuserdata/sam.ellis.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Nox/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Nox/Models/: BlockSession.swift  BlockedApp.swift  BlockedDomain.swift
ios/Nox/Services/: APIClient.swift  DeviceManager.swift
ios/Nox/Views/: AddAppView.swift  AddDomainView.swift  AuthView.swift  BlocklistView.swift  EnrollmentView.swift  SettingsView.swift  UnblockView.swift
scripts/: deploy.sh  nox.service  setup_nanomdm.sh
site/: index.html
site/privacy/: index.html
